--- a/assets/sass/_templates.scss
+++ b/assets/sass/_templates.scss
@@ -24,7 +24,6 @@ body {
   height: 100%;
   background-color: $beige-100;
   user-select: none;
-  //overflow-x: hidden;
 
   font-family: $font-family;
   font-weight: $font-weight;
@@ -173,7 +172,7 @@ a {
   min-width: 305px;
   margin: 0 auto;
   padding: 0 14px;
-  outline: greenyellow solid 2px;
+  //outline: greenyellow solid 2px;
 
   @media screen and (max-width: 360px) {
     width: 100%;
